--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "zod": "^3.25.67"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.3.22",
+    "@mastra/mcp": "^0.10.4",
     "@mozilla/readability": "^0.6.0",
     "dom-to-semantic-markdown": "^1.5.0",
     "playwright": "^1.53.0",
