--- a/manifest.json
+++ b/manifest.json
@@ -37,7 +37,7 @@
 			"resources": [
 				"injected.js",
 				"readability.js",
-				"dom-to-semantic-markdown.js"
+				"turndown.js"
 			],
 			"matches": [
 				"<all_urls>"
