fix connectivity and logs issue

--- a/manifest.json
+++ b/manifest.json
@@ -1,30 +1,48 @@
 {
 	"manifest_version": 3,
 	"name": "Browser Remote Operations Protocol",
-	"version": "2.7.0",
+	"version": "2.7.1",
 	"description": "Chrome extension with multiplexed BROP/CDP protocol support for advanced browser automation",
-	"permissions": ["tabs", "storage", "scripting", "debugger", "alarms"],
+	"permissions": [
+		"tabs",
+		"storage",
+		"scripting",
+		"debugger",
+		"alarms"
+	],
 	"icons": {
 		"16": "icons/icon16.png",
 		"48": "icons/icon48.png",
 		"128": "icons/icon128.png"
 	},
-	"host_permissions": ["<all_urls>"],
+	"host_permissions": [
+		"<all_urls>"
+	],
 	"background": {
 		"service_worker": "main_background.js"
 	},
 	"content_scripts": [
 		{
-			"matches": ["<all_urls>"],
-			"js": ["content.js"],
+			"matches": [
+				"<all_urls>"
+			],
+			"js": [
+				"content.js"
+			],
 			"run_at": "document_idle",
 			"all_frames": true
 		}
 	],
 	"web_accessible_resources": [
 		{
-			"resources": ["injected.js", "readability.js", "turndown.js"],
-			"matches": ["<all_urls>"]
+			"resources": [
+				"injected.js",
+				"readability.js",
+				"turndown.js"
+			],
+			"matches": [
+				"<all_urls>"
+			]
 		}
 	],
 	"action": {
